# dllm-jax

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
dllm_jax/: __init__.py  checkpoints.py  configs.py  data.py  dmax.py  models.py  schedulers.py  trainers.py  utils.py  weights.py
docs/: inference-optimization.md  inference.md  install.md  kv-cache-design.md  kv_cache_design.md  mfu-optimization.md  tpu_v4_32_ondemand_inference.md  training.md
scripts/: dmax_generate.py  dmax_generate_checkpoint.py  dmax_tinystories_train.py  dmax_train.py  inspect_sft_data.py  run_tpu_v4_32_3epoch.sh  tpu_dmax_infer_checkpoint.py  tpu_infer.py  tpu_train.py  tpu_v6e_smoke.py
scripts/examples/: run_tpu_train_v4_32_3epoch.sh  tpu_train_v4_32_3epoch.py
